meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report__tests__aggregate_core_metrics_session.snap
---
source: memfaultd/src/metrics/metric_report.rs
expression: sorted_metrics
---
{
  "battery_discharge_duration_ms": 100.0,
  "battery_soc_pct_drop": 100.0,
  "connectivity_connected_time_ms": 100.0,
  "connectivity_expected_time_ms": 100.0,
  "operational_crashes": 100.0,
  "sync_failure": 100.0,
  "sync_memfault_failure": 100.0,
  "sync_memfault_successful": 100.0,
  "sync_successful": 100.0
}
