meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report__tests__extra_min_max_exact_key.snap
---
source: memfaultd/src/metrics/metric_report.rs
expression: sorted_metrics
---
{
  "custom_gauge": 2.0,
  "custom_gauge_max": 3.0,
  "custom_gauge_min": 1.0
}
