meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report__tests__heartbeat_report_1.snap
---
source: memfaultd/src/metrics/metric_report.rs
expression: sorted_metrics
---
{
  "bar": 2.0,
  "baz": 3.0,
  "foo": 1.0
}
