meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report__tests__heartbeat_report_2.snap
---
source: memfaultd/src/metrics/metric_report.rs
expression: sorted_metrics
---
{
  "cpu_usage_memfaultd_pct": 2.0,
  "cpu_usage_memfaultd_pct_max": 3.0,
  "cpu_usage_memfaultd_pct_min": 1.0
}
