meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report__tests__heartbeat_report_5.snap
---
source: memfaultd/src/metrics/metric_report.rs
expression: sorted_metrics
---
{
  "foo": 1.6666666666666667
}
