meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report__tests__overwrite_previous_reading.snap
---
source: memfaultd/src/metrics/metric_report.rs
expression: sorted_metrics
snapshot_kind: text
---
{
  "bar": true,
  "foo": false
}
